# dolphin

./: .gitignore  README.md  pyproject.toml
dqn_logs/DQN_1/: events.out.tfevents.1737853220.maschinenmensch.27320.0
dqn_logs/DQN_2/: events.out.tfevents.1737855059.maschinenmensch.26844.0
src/dolphin/: __init__.py  main.py
src/dolphin/models/sliding_number/: dqn_torch_latest.pth
src/dolphin/templates/sliding_number/: auto_slider.html  human_slider.html
templates/sliding_number/: auto_slider.html
tests/: dolp_test.py  sliding_test.py
tests/sliding_number/: auto_slider.html  fromDQNtoPytorch.py  human_slider.html  sliding_number_template copy.html  stable-baseline-sample.py  stable-baseline-sample2.py  stable-baseline-sample3.py  stable-baseline-train2.py
