[project]
name = "dolphin"
version = "0.1.3"
description = "Reinforcement Learning Sandbox"
authors = [
    {name = "Alamsyah Koto Hanza", email = "alamhanz@gmail.com"},
    {name = "alamhanz", email = "alamhanz@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"

# Core dependencies
dependencies = [
    "numpy>=1.26.4",
    "joblib==1.4.2",
    "jinja2>=3.0.2",
    "gymnasium>=1.0.0",
    "sliding-puzzles>=0.9.1",
    "torch>=2.6.0"
]
license = {text = "MIT"}

[dependency-groups]
dev1 = [
    "pandas>=2.2.3",
    "numpy>=1.26.4",
    "sliding-puzzles>=0.9.1",
    "gymnasium",
    "pygame>=2.6.0",
    "joblib==1.4.2",
    "cmake>=3.31.4",
    "stable-baselines3[extra]>=2.4.0",
    "shimmy>=2.0",
    "jinja2>=3.0.2",
]

[tool.pdm]
distribution = true
[tool.pdm.scripts]
# Original script
sea.cmd = "python test/yes.py"

# Test
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

# Linting and Formatting Tools
[tool.pylint.MASTER]
ignore-paths = ["^.venv/.*$", "^.tox/.*$", "^docs/*"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dolphin" = ["models/sliding_number/*.zip", "models/sliding_number/*.pth", "templates/sliding_number/*.html"]
