[project]
name = "dolphin"
version = "0.1.3"
description = "Reinforcement Learning Sandbox"
authors = [
    {name = "Alamsyah Koto Hanza", email = "alamhanz@gmail.com"},
    {name = "alamhanz", email = "alamhanz@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"

# Core dependencies
dependencies = [
    "numpy>=1.26.4",
    "sliding-puzzles>=0.9.1",
    "gymnasium",
    "torch==2.3.1"  # Default to CPU
]

# Development dependencies (GPU version)
[dependency-groups]
dev1 = [
    "torch>=2.3.0",  # Use GPU version for development
    "pandas>=2.2.3",
    "numpy>=1.26.4",
    "sliding-puzzles>=0.9.1",
    "gymnasium",
    "pygame>=2.6.0",
    "joblib==1.4.2",
    "cmake>=3.31.4",
    "stable-baselines3[extra]>=2.4.0",
    "shimmy>=2.0",
    "jinja2>=3.0.2",
]

# Fallback to GPU if CPU version not found
[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/cpu/torch_stable.html"
name = "torch"

[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/cu117/torch_stable.html"
name = "torch-gpu"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
# Original script
sea.cmd = "python test/yes.py"

# Test
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

# Linting and Formatting Tools
[tool.pylint.MASTER]
ignore-paths = ["^.venv/.*$", "^.tox/.*$", "^docs/*"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dolphin" = ["models/sliding_number/*.zip", "models/sliding_number/*.pth", "templates/sliding_number/*.html"]
